--- a/ScrollNews/app/src/main/res/values/strings.xml
+++ b/ScrollNews/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ScrollNews</string>
-    <string name="app_id">558447037640254</string>
+    <string name="app_id">1711950289019201</string>
+    <string name="action_settings">Settings</string>
 </resources>
